# label-python

./: AGENT_HANDOFF.md  PROJECT.md  SHOPIFY_INTEGRATION_PLAN.md  font_test.py  font_test2.py  font_test3.py  font_test4.py  font_test_final.py  labelspec.md  product-label.avif  prompt.md  pyproject.toml  requirements.txt
Alliance_Logo/CMYK/AI/: ICON - Red _CMYK.ai  (+9 more)
data/: sku_mappings.json
data/chemicals/: isopropyl-alcohol-99.json  phosphoric-acid-10.json
data/test_skus/: AC-IPA-99-55.json  AC-MO-FG-1G.json  AC-NAHCO3-50.json  AC-PA-10-5G.json
print-ui/: .env.example  .gitignore  next.config.js  package-lock.json  package.json  tailwind.config.ts
print-ui/app/: globals.css  layout.tsx  page.tsx
print-ui/components/: AgentStatus.tsx  LotSelector.tsx  PrintButton.tsx  ProductSearch.tsx  QuantityInput.tsx  index.ts
print-ui/drizzle/: 0000_groovy_slayback.sql
print-ui/lib/: agent.ts  db.ts  lot.ts  schema.ts
print-ui/scripts/: sync-shopify.mjs
src/: __init__.py  cli.py  config.py  label_renderer.py  label_renderer_organic.py  label_renderer_scientific.py  models.py
src/alliance_label_generator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/components/: __init__.py  barcode.py  dot.py  ghs.py  ghs_frosted.py  nfpa.py  qrcode.py
src/database/: __init__.py  chemical_db.py  merger.py  sku_mapper.py
src/importers/: shopify.py  shopify_api.py
src/print_agent/: __init__.py  config.py  main.py  models.py  printer.py
src/utils/: __init__.py  effects.py  gradients.py  organic_shapes.py  text_fitting.py
(+42 files in other folders)
